--- a/CafeAPI/CafeAPI/CafeAPI.csproj
+++ b/CafeAPI/CafeAPI/CafeAPI.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Controllers\XUATHANGController.cs" />
     <Compile Include="DAO\Connection.cs" />
+    <Compile Include="DAO\DonHangDAO.cs" />
     <Compile Include="DAO\HANGSX_DAO.cs" />
     <Compile Include="DAO\LOAISP_DAO.cs" />
     <Compile Include="DAO\SANPHAM_DAO.cs" />
