--- a/QuanCafeForm/QuanCafeForm/QuanCafeForm.csproj
+++ b/QuanCafeForm/QuanCafeForm/QuanCafeForm.csproj
@@ -87,6 +87,7 @@
     <Compile Include="DAO\DonHangDAO.cs" />
     <Compile Include="DAO\LoaiSpDAO.cs" />
     <Compile Include="DAO\ConnectAPI.cs" />
+    <Compile Include="DAO\NhaCungCapDAO.cs" />
     <Compile Include="DAO\NhapHangDAO.cs" />
     <Compile Include="DAO\PriceDAO.cs" />
     <Compile Include="DAO\SanphamDAO.cs" />
@@ -134,6 +135,12 @@
     <Compile Include="GUI\ucLoaiSP.Designer.cs">
       <DependentUpon>ucLoaiSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ucNHAPHANG.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ucNHAPHANG.Designer.cs">
+      <DependentUpon>ucNHAPHANG.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\ucSANPHAM.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -180,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ucLoaiSP.resx">
       <DependentUpon>ucLoaiSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ucNHAPHANG.resx">
+      <DependentUpon>ucNHAPHANG.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ucSANPHAM.resx">
       <DependentUpon>ucSANPHAM.cs</DependentUpon>
@@ -556,7 +566,9 @@
     <Content Include="Scripts\ckeditor\skins\v2\templates.css" />
     <Content Include="Scripts\ckeditor\themes\default\theme.js" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
