--- a/QuanCafeForm/QuanCafeForm/QuanCafeForm.csproj
+++ b/QuanCafeForm/QuanCafeForm/QuanCafeForm.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Aspose.Words">
+      <HintPath>D:\Setup file\Apose\Aspose.Words.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.BonusSkins.v19.1" />
     <Reference Include="DevExpress.Charts.v19.1.Core, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v19.1" />
@@ -153,6 +156,7 @@
     <Compile Include="Models\CHITIETNHAPHANG.cs" />
     <Compile Include="Models\DONHANG.cs" />
     <Compile Include="Models\HANGSX.cs" />
+    <Compile Include="Models\InFoCTNhapHang.cs" />
     <Compile Include="Models\LOAISP.cs" />
     <Compile Include="Models\NGUOIDUNG.cs" />
     <Compile Include="Models\NHACUNGCAP.cs" />
@@ -215,6 +219,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="Scripts\ckeditor\ckeditor.pack" />
+    <None Include="Template\NhapKho.docx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\ckeditor\adapters\jquery.js" />
