--- a/QuanCafeForm/QuanCafeForm/QuanCafeForm.csproj
+++ b/QuanCafeForm/QuanCafeForm/QuanCafeForm.csproj
@@ -52,6 +52,10 @@
     <Reference Include="DevExpress.XtraBars.v19.1" />
     <Reference Include="DevExpress.Sparkline.v19.1.Core" />
     <Reference Include="DevExpress.XtraCharts.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v19.1.Extensions, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v19.1.UI, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v19.1.Web, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v19.1.Wizard, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v19.1" />
     <Reference Include="DevExpress.XtraGauges.v19.1.Core, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -164,7 +168,9 @@
     <Compile Include="Models\PRICE.cs" />
     <Compile Include="Models\SANPHAM.cs" />
     <Compile Include="Models\SANPHAM1.cs" />
+    <Compile Include="Models\SanPhamBanChay.cs" />
     <Compile Include="Models\THONGKE.cs" />
+    <Compile Include="Models\ThongKeDate.cs" />
     <Compile Include="Models\THONGTINCHITIETDH.cs" />
     <Compile Include="Models\THONGTINCHITIETDH2.cs" />
     <Compile Include="Models\TRANGTHAIDH.cs" />
